# sae_cooccurrence

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  top_neurons.csv  top_similar_sae_features.csv
.devcontainer/: devcontainer.json
data/: gdown_lookup.csv
documentation/: co_occurrence_data_flow_complex.mmd  co_occurrence_data_flow_simple.mmd
sae_cooccurence/: graph_generation.py  normalised_cooc_functions.py  pca.py  pca_animation.py
sae_cooccurrence/: activation_tuning.py  graph_generation.py  normalised_cooc_functions.py  pca.py  pca_animation.py  pca_animation_deprecated.py  pca_deprecated.py  pca_specialised.py  streamlit.py
src/: 1_generate_normalised_features_loop.py  2_generate_graphs_loop.py  3_analyse_subspaces.ipynb  4_generate_pca_loop.py  5_pca_for_streamlit.py  6_pca_from_streamlit_template.ipynb  config.toml  config_feature_split.toml  config_gemma.toml  config_gemma_l0.toml  config_gemma_widths.toml  config_pca_streamlit.toml  config_pca_streamlit_maxexamples.toml  config_test.toml  general_streamlit.py  generate_thresholded_matrices.py  streamlit_minimal.py
temp/: 5_pca_for_streamlit_par.py  ablation_y_n.ipynb  compare_features_one_of.ipynb  debug_mean_subgraph_size.ipynb  debug_plot_graph_from_matrix.ipynb  feature_activation_and_l0.py  reprex_activations_without_special.py  steering_test_2.ipynb  steering_test_3.ipynb  steering_test_4.ipynb  steering_test_5.ipynb  test_activation_store_fix.ipynb  test_activation_store_fix_v2.ipynb  test_activation_store_fix_v3.ipynb
tests/: test_apply_activation_threshold.py  test_calculate_jaccard_matrices_chunkedv3.py  test_check_if_sae_has_threshold.py  test_compute_coocurrence_matrices.py  test_create_decode_tokens_function.py  (+16 more)
(+141 files in other folders)
