[tool.poetry]
name = "sae-cooccurence"
version = "0.1.0"
description = ""
authors = ["MClarke1991 <matthewaclarke1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sae-lens = "^3.23.4"
toml = "^0.10.2"
gdown = "^5.2.0"
transformer-lens = "^2.7.0"
torch = "^2.4.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
