[tool.poetry]
name = "sae-cooccurence"
version = "0.1.0"
description = ""
authors = ["MClarke1991 <matthewaclarke1991@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
sae-lens = "^3.23.4"
toml = "^0.10.2"
gdown = "^5.2.0"
transformer-lens = "^2.7.0"
torch = "^2.4.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
streamlit = "^1.39.0"
pyvis = "^0.3.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
pyright = "^1.1.384"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"

[tool.ruff]
exclude = ["dist", "docs"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.Tuple".msg = "Use `tuple` instead"
"typing.List".msg = "Use `list` instead"
"tqdm._tqdm".msg = "Use `from tqdm.autonotebook import tqdm` instead"
"tqdm.tqdm".msg = "Use `from tqdm.autonotebook import tqdm` instead"

[tool.pyright]
typeCheckingMode = "standard"